style.css
* {
    margin: 0;
    padding: 0;
}

.container {
    display: grid;
    resize: both;
    overflow: auto;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    grid-template-columns: 400px 2fr 1fr;
    height: 100vh;
}

/* Sidebar */

.sidebar {
    padding-left: 30px;
    padding-top: 20px;
    display: grid;
    resize: both;
    grid-area: 1 / 1 / 6 / 2;
    background-color: rgb(53, 121, 9);
}

.sidebar > .menu > ul {
    list-style: none;
    line-height: 50px;
}

ul li:nth-child(n+1):hover {
    text-decoration: underline;
}


.sidebar > .settings > ul {
    list-style: none;
    line-height: 50px;
    margin-bottom: 150px;
}

a {
    text-decoration: none;
    color: black;
    padding: 15px;
    font-size: 18px;
}

.logo {
    font-size: 30px;
}

/* Header */

.header {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-area: 1 / 2 / 2 / 4;
    padding: 30px;
    padding-bottom: 20px;
    background-color: #ecfccb;
}

.searchbar {
    border-radius: 10px;
    width: 500px;
    height: 25px;
    background-repeat: no-repeat;
    background-position: left;
}

.search {
    display: grid;
    grid-template-columns: 50px 70px;
    padding: 10px;
}

.search img {
    height: 30px;
}

.userinfo {
    display: grid;
    grid-template-columns: repeat(2, 60px);
    grid-template-rows: 20px 20px;
    align-items: center;
}

.userinfo p {
    grid-column: 3;
    grid-row: 1;
    font-weight: bold;
    cursor: pointer;
}

.username {
    display: grid;
    grid-template-columns: 80px;
    grid-area: 2;
}

.username p, h3 {
    grid-column: 2;
    grid-row: 1;
}

.username h3 {
    padding: 20px;
    padding-left: 0;
    grid-column: 2;
}

.buttons {
    display: grid;
    grid-template-columns: repeat(3, 80px);
    grid-template-rows: 40px;
    align-self:flex-end;
    gap: 30px;
    cursor: pointer;
}

button {
    background-color: rgb(53, 121, 9);
    border-radius: 10px;
    width: 80px;
    height: 30px;
    color: white;
    border: none;
    cursor: pointer;
}

#alien1 {
    height: 60px;
    width: 60px;
    border-radius: 50%;
}

#alien2 {
    height: 40px;
    width: 40px;
    border-radius: 50%;
    cursor: pointer;
}

#bell {
    cursor: pointer;
}

/* Main content */

.content {
    display: grid; 
    grid-template-columns: 3fr 1fr;
    grid-area: 2 / 2 / 6 / 4;
    background-color: #f7fee7;
    height: 100vh;
}

.your-projects {
    grid-area: 1 / 1 / 1/ 1;
    font-size: 20px;
    padding-left: 35px;
    padding-top: 10px;
}

.annoucements {
    grid-area: 1 / 2 / 1 / 3;
    font-size: 20px;
    padding-left: 15%;
    padding-top: 10px;
}

.project-cards {
    display: grid;
    grid-area: 1 / 1 / 3 / 2;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    grid-template-rows: repeat(auto-fit, minmax(170px, 1fr));
    gap: 10px;
    padding: 40px;
    text-align: center;
    font-size: 20px;
}

.project-cards h4 {
    font-size: 25px;
}

.project-card div {
    cursor: pointer;
    height: 30px;
}

.project-card {
    border: 1px solid rgb(190, 189, 189);
    border-radius: 10px;
    box-shadow: -5px 0px rgb(53, 121, 9);
    padding: 10px;
    background-color: #d9f99d;
    transition: background-color .5s;
}

.project-card:hover {
    background-color: gold
}

.announcement-cards {
    display: grid;
    grid-template-rows: repeat(2, minmax(300px, 1fr));
    grid-area: 1 / 2 / 3 / 3;
    gap: 10px;
    padding: 40px;
}

.announcement-text {
    font-size: 14px;
    border-bottom-width: 1px;
    border-bottom-style :solid;
    border-bottom-color: rgb(139, 136, 136);
    padding-bottom: 8px;
}

.updates-card, .trending-card {
    display: grid;
    justify-content: center;
    align-items: center;
    grid-column: 3 / 4;
    border: 1px solid black;
    width: 100%;
    height: 90%;
    border-radius: 10px;
    padding: 10px;
    background-color: #d9f99d;
    transition: background-color .5s;
}

.updates-card:hover, .trending-card:hover {
    animation: shake 0.5s;
}

.trending {
    grid-area: 2 / 2 / 2 / 3;
    font-size: 20px;
    font-weight: bold;
    padding-left: 15%;;
    padding-bottom: 50px;
}

.trending-card img {
    height: 30px;
    width: 30px;
    border-radius: 50%;
}

.trending-card ul li {
    list-style: none;
    padding: 10px;
}

.updates-card p {
    padding-bottom: 5px;
    border-bottom: 1px solid #08240d;
}


@keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
  }

